Modified or() in MtxSelectQuery to not use List.getLast()
It is unsupported in some Java versions